# Terminal

./: .bazelrc  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  MODULE.bazel  README.md  TODO.md  all.sh  config.toml  run_client.sh  run_client2.sh  run_server.sh  ubuntu.sh
bazel/: BUILD.bazel  Bazel.md  cargo_runner.sh  rustc_runner.sh
game/: BUILD.bazel  Cargo.toml  build.rs
game/src/: backend.rs  frontend.rs  game.rs
game/src/game/: cookie.rs  cookies.rs
pty/: Cargo.toml  README.md
pty/src/: command.rs  lease.rs  lib.rs  pty.rs  raw_pty.rs  release_on_drop.rs  tail.rs
terminal/: Cargo.toml  README.md  build.rs
terminal/assets/: index.html
terminal/assets/code-mirror/: package-lock.json  package.json  webpack.config.cjs
terminal/assets/code-mirror/src/: index.js
terminal/assets/jsdeps/: package-lock.json  package.json
terminal/assets/jsdeps/src/: index.js
terminal/plans/: streaming-logs.md
terminal/src/: _common.scss  assets.rs  backend.rs  frontend.rs  lib.rs  processes.rs  server.rs  state.rs  terminal.rs  terminal.scss  terminal_id.rs
terminal/src/api/: client.rs  client_address.rs  client_id.rs  client_name.rs  mod.rs  server.rs
terminal/src/api/client/: channel.rs  list.rs  login.rs  new_id.rs  remotes.rs  request.rs  resize.rs  set_order.rs  set_title.rs  stream.rs  stream_old.rs  terminals.rs  write.rs
terminal/src/api/client/channel/: download.rs  json_sink.rs  json_stream.rs  upload.rs
terminal/src/api/client/stream/: ack.rs  close.rs  dispatch.rs  dispatcher.rs  get.rs  init.rs  keepalive.rs  lock.rs  pipe.rs  read.rs  register.rs  write.rs
terminal/src/api/client/stream_old/: dispatch.rs  get.rs  register.rs
terminal/src/api/client/terminal_api/: list.rs  mod.rs  new_id.rs  resize.rs  set_order.rs  set_title.rs  stream.rs  write.rs
terminal/src/api/server/: auth.rs  channel.rs  correlation_id.rs  list.rs  mod.rs  new_id.rs  remotes.rs  resize.rs  set_order.rs  set_title.rs  stream.rs  terminals.rs  write.rs
terminal/src/api/server/channel/: download.rs  manager.rs  upload.rs
terminal/src/api/server/common/: remotes.rs
terminal/src/api/server/stream/: ack.rs  close.rs  pipe.rs  register.rs  registration.rs
terminal/src/api/server/terminal_api/: mod.rs  new_id.rs  resize.rs  router.rs  set_order.rs  set_title.rs  stream.rs  terminals.rs  write.rs
terminal/src/api/shared/: terminal_schema.rs
terminal/src/assets/: icons.rs  install.rs
terminal/src/backend/: agent.rs  auth.rs  cli.rs  client.proto  client_service.rs  config.rs  config_file.rs  daemonize.rs  log_stream.rs  mod.rs  protos.rs  root_ca_config.rs  server_config.rs  throttling_stream.rs  tls_config.rs
terminal/src/backend/auth/: mod.rs  tests.rs
terminal/src/backend/cli/: kill.rs  pidfile.rs
terminal/src/backend/client_service/: ack.rs  close.rs  convert.rs  mod.rs  new_id.rs  notify.rs  register.rs  remote_fn.rs  remote_server_fn.rs  remotes.rs  resize.rs  routing.rs  set_order.rs  set_title.rs  shared_service.rs  terminals.rs  write.rs
terminal/src/backend/config/: into_dyn.rs  io.rs  merge.rs  mesh.rs  password.rs  server.rs  types.rs
terminal/src/backend/config_file/: io.rs  kill.rs  merge.rs  password.rs  pidfile.rs  read.rs  types.rs
terminal/src/backend/protos/: mod.rs  portforward.proto  shared.proto
terminal/src/converter/: api.rs  conversion_tabs.rs  converter.scss  mod.rs  service.rs  tabs.rs  ui.rs
terminal/src/converter/service/: asn1.rs  base64.rs  dns.rs  https_info.rs  json.rs  jwt.rs  pkcs7.rs  time.rs  timestamps.rs  tls_info.rs  unescaped.rs  x509.rs
terminal/src/frontend/: element_capture.rs  login.rs  login.scss  menu.rs  menu.scss  mod.rs  mousemove.rs  remotes.rs  remotes.scss  remotes_list.rs  remotes_ui.rs  sleep.rs  timestamp.rs  utils.rs
terminal/src/frontend/timestamp/: datetime.rs  tick.rs
terminal/src/logs/: client.rs  event.rs  logs.rs  mod.rs  old.rs  state.rs  stream.rs  subscription.rs  tests.rs  tracing.rs
terminal/src/logs/client/: engine.rs  mod.rs  ndjson.rs  panel.rs  panel.scss
terminal/src/portforward/: engine.rs  listeners.rs  manager.rs  mod.rs  port_forward.scss  schema.rs  state.rs  sync_state.rs  ui.rs
terminal/src/portforward/engine/: retry.rs
terminal/src/processes/: io.rs  resize.rs  set_title.rs  stream.rs  tail.rs  write.rs
terminal/src/state/: app.rs  make_state.rs  mod.rs
terminal/src/terminal/: attach.rs  javascript.js  mod.rs  terminal.scss  terminal_tab.rs  terminal_tabs.rs  terminal_tabs.scss
terminal/src/terminal/terminal_tabs/: add_tab.rs  move_tab.rs
terminal/src/text_editor/: autocomplete.rs  code_mirror.js  code_mirror.rs  editor.rs  file_path.rs  folder.rs  folder.scss  fsio.rs  lsp-notes.txt  manager.rs  mod.rs  notify.rs  path_selector.rs  remotes.rs  rust_lang.rs  service.rs  side.rs  side.scss  state.rs  synchronized_state.rs  text_editor.scss  text_editor_service.rs  text_editor_ui.rs  text_editor_ui.scss  ui.rs
terminal/src/text_editor/autocomplete/: remote.rs  server_fn.rs  service.rs  ui.rs
terminal/src/text_editor/fsio/: canonical.rs  fsmetadata.rs  remote.rs  service.rs  ui.rs
terminal/src/text_editor/graph/: graph.rs  graph.scss
terminal/src/text_editor/graph_editor/: graphx.rs  mod.rs
terminal/src/text_editor/notify/: event_handler.rs  service.rs  ui.rs  watcher.rs
terminal/src/text_editor/path_selector/: service.rs  ui.rs
terminal/src/text_editor/rust_lang/: messages.rs  remote.rs  service.rs  synthetic.rs
terminal/src/text_editor/search/: mod.rs  ui.rs
terminal/src/text_editor/service/: autocomplete.rs
terminal/src/text_editor/side/: mutation.rs  ui.rs
terminal/src/text_editor/text_editor_ui/: autocomplete.rs  code_mirror.js  code_mirror.rs  editor.rs  path_selector.rs
terminal/src/text_editor/ui/: autocomplete.rs  code_mirror.js  code_mirror.rs  editor.rs  path_selector.rs  sync_status.rs
terminal/src/utils/: async_throttle.rs  mod.rs  more_path.rs  unwrap_infallible.rs
terminal/tests/: config-client.toml  config-client2.toml  config-server.toml  run-client.sh  run-client2.sh  run-server.sh  run.sh  server-config.toml
(+95 files in other folders)
