[workspace]
members = ["game", "pty", "terminal"]
resolver = "2"

[workspace.package]
version = "0.1.22"
authors = ["Lamparo <LamparoS@Pavy.one>"]
edition = "2024"
repository = "https://github.com/Terrazzo-Web/Terminal"
license = "MIT"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = 3            # Optimization level.
debug = false            # Include debug info.
debug-assertions = false # Enables debug assertions.
overflow-checks = false  # Enables runtime integer overflow checks.
lto = "fat"              # Sets link-time optimization.
panic = "abort"          # The panic strategy.
incremental = true       # Incremental compilation.

[workspace.dependencies]
terrazzo-pty = { version = "0.1.22", path = "pty" }

async-trait = { version = "0.1.89" }
autoclone = { version = "0.1.20" }
axum = { version = "0.8.8" }
axum-extra = { version = "0.12.3" }
base64 = { version = "0.22.1" }
bitflags = { version = "2.10.0" }
bytes = { version = "1.11.0" }
chrono = { version = "0.4.41", default-features = false, features = [
    "now",
    "std",
    "wasmbind",
] }
clap = { version = "4.5.53", features = ["derive"] }
cms = { version = "0.2.3" }
const_format = { version = "0.2.35" }
darling = { version = "0.23.0" }
dashmap = { version = "6.1.0" }
deluxe = { version = "0.5.0" }
fluent-asserter = { version = "0.1.9" }
futures = { version = "0.3.31" }
heck = { version = "0.5.0" }
hickory-client = { version = "0.25.2" }
http = { version = "1.4.0" }
humantime = { version = "2.3.0" }
include_directory = { version = "0.1.1" }
inventory = { version = "0.3.21" }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
libc = { version = "0.2.177" }
mime = { version = "0.3.17" }
mime_guess = { version = "2.0.5" }
nameth = { version = "0.1.20" }
nix = { version = "0.30.1" }
notify = { version = "8.2.0" }
oid-registry = { version = "0.8.1" }
openssl = { version = "0.10.75" }
pbkdf2 = { version = "0.12.2" }
pin-project = { version = "1.1.10" }
prettyplease = { version = "0.2.37" }
proc-macro2 = { version = "1.0.104" }
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
quote = { version = "1.0.42" }
regex = { version = "1.12.2" }
reqwest-wasm = { version = "0.11.16" }
rpassword = { version = "7.4.0" }
rsass-macros = { version = "0.29.0" }
rustix = { version = "1.1.3" }
rustls-native-certs = { version = "0.8.3" }
scopeguard = { version = "1.2.0" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.147" }
serde_urlencoded = { version = "0.7.1" }
serde_yaml_ng = { version = "0.10.0" }
serde-wasm-bindgen = { version = "0.6.5" }
server_fn = { version = "0.8.8" }
sha2 = { version = "0.10.9" }
simple_asn1 = { version = "0.6.3" }
static_assertions = { version = "1.1.0" }
stylance = { version = "0.7.4" }
syn = { version = "2.0.111" }
tantivy = { version = "0.25.0" }
terrazzo = { version = "0.1.20", default-features = false }
terrazzo-build = { version = "0.1.19" }
thiserror = { version = "2.0.17" }
tls-parser = { version = "0.12.2" }
tokio = { version = "1.48.0" }
tokio-rustls = { version = "0.26.4" }
tokio-stream = { version = "0.1.17" }
tokio-util = { version = "0.7.17" }
toml = { version = "0.9.8" }
tonic = { version = "0.14.2" }
tonic-prost = { version = "0.14.2" }
tonic-prost-build = { version = "0.14.2" }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.8" }
tracing = { version = "0.1.43" }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.22" }
tracing-subscriber-wasm = { version = "0.1.0" }
trz-gateway-client = { version = "0.1.19" }
trz-gateway-common = { version = "0.1.20" }
trz-gateway-server = { version = "0.1.20" }
unescaper = { version = "0.1.6" }
url = { version = "2.5.7" }
uuid = { version = "1.18.1" }
wasm-bindgen = { version = "0.2.105" }
wasm-bindgen-futures = { version = "0.4.55" }
wasm-bindgen-test = { version = "0.3.50" }
wasm-streams = { version = "0.4.2" }
web-sys = { version = "0.3.80" }
x509-parser = { version = "0.18.0" }

[workspace.lints.rust]
unused = "deny"
warnings = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
enum_variant_names = "allow"
needless_return = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
