module(
    name = "terminal",
)

bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    versions = ["1.92.0"],
    extra_target_triples = [
        "wasm32-unknown-unknown",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "terminal_rust_host_tools",
)
use_repo(rust_host_tools, "terminal_rust_host_tools")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.spec(
    package = "stylance-cli",
    version = "=0.7.4",
)

crate.spec(
    package = "wasm-pack",
    version = "=0.14.0",
)

crate.from_specs(
    name = "tool_crates",
    generate_binaries = True,
)

use_repo(crate, "tool_crates")
