module(
    name = "terminal",
)

bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.69.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    extra_target_triples = [
        "wasm32-unknown-unknown",
    ],
    versions = ["1.92.0"],
)
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

register_toolchains("//bazel:wasm_bindgen_toolchain")

crates = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates, "crates")

tool_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
tool_crate.spec(
    package = "wasm-bindgen-cli",
    version = "=0.2.115",
)
tool_crate.from_specs(
    name = "tool_crates",
    generate_binaries = True,
)
use_repo(tool_crate, "tool_crates")
