load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_rust_wasm_bindgen//:defs.bzl", "rust_wasm_bindgen_toolchain")

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier_check",
    lint_mode = "warn",
    mode = "check",
)

alias(
    name = "stylance",
    actual = "@tool_crates//:stylance-cli__stylance",
    visibility = ["//visibility:public"],
)

rust_wasm_bindgen_toolchain(
    name = "wasm_bindgen_toolchain_impl",
    visibility = ["//visibility:public"],
    wasm_bindgen_cli = "@tool_crates//:wasm-bindgen-cli__wasm-bindgen",
)

toolchain(
    name = "wasm_bindgen_toolchain",
    toolchain = ":wasm_bindgen_toolchain_impl",
    toolchain_type = "@rules_rust_wasm_bindgen//:toolchain_type",
    visibility = ["//visibility:public"],
)
