load("@crates//:defs.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@rules_rust_wasm_bindgen//:defs.bzl", "rust_wasm_bindgen")

package(default_visibility = ["//visibility:public"])

rust_shared_library(
    name = "game_client_wasm_lib",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(["src/**/*.scss"]) + ["Cargo.toml"],
    crate_features = ["client"],
    crate_name = "game",
    crate_root = "src/lib.rs",
    edition = "2024",
    target_compatible_with = ["@platforms//cpu:wasm32"],
    deps = crate_deps(
        [
            "stylance",
            "terrazzo",
            "wasm-bindgen",
            "web-sys",
        ],
        package_name = "game",
    ),
)

rust_wasm_bindgen(
    name = "game_client_wasm_bindgen",
    out_name = "game",
    target = "web",
    wasm_file = ":game_client_wasm_lib",
)

genrule(
    name = "game_client_wasm",
    srcs = [":game_client_wasm_bindgen"],
    outs = [
        "pkg/game.js",
        "pkg/game_bg.wasm",
    ],
    cmd = """
set -euo pipefail

mkdir -p "$(@D)/pkg"

for src in $(locations :game_client_wasm_bindgen); do
  case "$${src##*/}" in
    game.js)
      cp "$$src" "$(@D)/pkg/game.js"
      ;;
    game_bg.wasm)
      cp "$$src" "$(@D)/pkg/game_bg.wasm"
      ;;
  esac
done
""",
)
